UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Channel_Readiness_Plan__c.field-meta.xml
<CustomField>
    <fullName>Channel_Readiness_Plan__c</fullName>
    <label>Channel Readiness Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>