UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Communication_Plan__c.field-meta.xml
<CustomField>
    <fullName>Communication_Plan__c</fullName>
    <label>Communication Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>