UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Converted_in_the_project_overview__c.field-meta.xml
<CustomField>
    <fullName>Converted_in_the_project_overview__c</fullName>
    <label>Converted in the project overview</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>