UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <label>Customer Journey</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>