UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Goal_Strategic_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Goal_Strategic_Initiative__c</fullName>
    <label>Goal/Strategic Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase Revenue</fullName>
            </value>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Reduce Expense</fullName>
            </value>
            <value>
                <fullName>Run the Business</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>