UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Goals_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Goals_KPIs__c</fullName>
    <label>Goals/KPIs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>