UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Impacted_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Business_Unit__c</fullName>
    <label>Impacted Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>