UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Impacted_Departments__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Departments__c</fullName>
    <label>Impacted Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business - Alt Channels Operations</fullName>
            </value>
            <value>
                <fullName>Business - Managed Assurance</fullName>
            </value>
            <value>
                <fullName>Business - Managed Services</fullName>
            </value>
            <value>
                <fullName>Business - Product and Marketing</fullName>
            </value>
            <value>
                <fullName>Business - Sales</fullName>
            </value>
            <value>
                <fullName>Business - Sales Operations</fullName>
            </value>
            <value>
                <fullName>Business - SMB Product and Marketing</fullName>
            </value>
            <value>
                <fullName>Business - Enterprise Sales</fullName>
            </value>
            <value>
                <fullName>Business - Enterprise Support</fullName>
            </value>
            <value>
                <fullName>Business - Vendor Request</fullName>
            </value>
            <value>
                <fullName>Business - New System/Tool Request</fullName>
            </value>
            <value>
                <fullName>Business - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>