UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Impacted_Systems__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Systems__c</fullName>
    <label>Impacted Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>DPI</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>Gigaverse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>