UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Is_This_Fast_Track_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_This_Fast_Track_Request__c</fullName>
    <label>Is This Fast Track Request?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>