UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/JIRA_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Link__c</fullName>
    <inlineHelpText>Jira URL for the Project</inlineHelpText>
    <label>JIRA Link</label>
    <type>Url</type>
</CustomField>