UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Marketing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Plan__c</fullName>
    <label>Marketing Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>