UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/New_or_Existing__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing__c</fullName>
    <label>New or Existing</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>