UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Objective_statement__c.field-meta.xml
<CustomField>
    <fullName>Objective_statement__c</fullName>
    <label>Objective statement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>