UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brand (Naming for new Products)</fullName>
            </value>
            <value>
                <fullName>Campaign Development</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Competitive Insights</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Market Strategy</fullName>
            </value>
            <value>
                <fullName>Metrics &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Product (includes new, update to existing, offer (pricing), promotion,etc.)</fullName>
            </value>
            <value>
                <fullName>Sales Support Materials (Flyers, Yard Signs, Job Aids, Scribes, etc.)</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>