UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Requested_In_Market_Data__c.field-meta.xml
<CustomField>
    <fullName>Requested_In_Market_Data__c</fullName>
    <label>Requested In-Market Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>