UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/SalesForce_SalesBudddy_DPI_Requiremen__c.field-meta.xml
<CustomField>
    <fullName>SalesForce_SalesBudddy_DPI_Requiremen__c</fullName>
    <label>SalesForce / SalesBudddy/ DPI Requiremen</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>