UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>