UCF-APR2.4/ftr main/force-app/main/default/objects/Project__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <label>General</label>
</RecordType>